# ESP32-S3-Touch-LCD-1.85C

./: README.md
Arduino/examples/01_lvgl_example/: 01_lvgl_example.ino  Display_ST77916.cpp  Display_ST77916.h  LVGL_Driver.cpp  LVGL_Driver.h  TCA9554PWR.cpp  TCA9554PWR.h  Touch_CST816.cpp  Touch_CST816.h  lv_conf.h
Arduino/examples/02_RTC_PCF85063/: 02_RTC_PCF85063.ino
Arduino/examples/03_audio_out_no_tf/: 03_audio_out_no_tf.ino  I2C_Driver.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/components/auido_borad/: CMakeLists.txt  Kconfig.projbuild  esp_board_init.c  idf_component.yml
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/components/auido_borad/boards/ESP32_S3_AUDIO_Board/: bsp_board.c
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/components/auido_borad/boards/include/: ESP32_S3_AUDIO_Board.h  bsp_board.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/components/auido_borad/include/: esp_board_init.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/: CMakeLists.txt  idf_component.yml  main.c
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/Audio_Driver/: Audio_Driver.c  Audio_Driver.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/BAT_Driver/: BAT_Driver.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/LCD_Driver/: ST77916.c  ST77916.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h  LVGL_Music.c  LVGL_Music.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/MIC_Driver/: MIC_Speech.c  MIC_Speech.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/PCF85063/: PCF85063.c  PCF85063.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/Touch_Driver/: CST816.c  CST816.h
ESP-IDF/ESP32-S3-Touch-LCD-1.85C-Test/ESP32-S3-Touch-LCD-1.85C-Test/main/Touch_Driver/esp_lcd_touch/: esp_lcd_touch.h
hardware/dimensions/: ESP32-S3-Touch-LCD-1.85C-dimension.dxf
(+14 files in other folders)
